# dpu_kmeans

./: .buildinfo  .clang-tidy  .clangd  .clangd.example  .clangd.in  .dvcignore  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE  MANIFEST.in  README.html  README.md  debug_script.py  dpu_kmeans.html  dvc.yaml  genindex.html  index.html  multiline.json  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: README.doctree  dpu_kmeans.doctree  environment.pickle  index.doctree
.dvc/: config
.dvc/plots/: multiline.json
.github/workflows/: conda.yml  documentation.yml  pip.yml  publish-to-test-pypi.yml  wheels.yml
_sources/: dpu_kmeans.rst.txt  index.rst.txt
_static/: documentation_options.js
benchmarks/: .gitignore  CPU.py  DPU.py  benchmark.py  get_hostname.sh  machine_log.py  machines_info.yaml  params_schema.json  requirements.txt  run_all_DPU_benchmarks.sh  run_all_GPU_benchmarks.sh  setup_gpu_env.sh  simple_run.py
benchmarks/dimension/: .gitignore  CPU+DPU.py  CPU.py  DPU.py  benchmarks.csv  dimension_benchmarks.csv  dimension_metrics.json  dimension_plots.csv  dvc.yaml  dvc.yaml.old  metrics.json  params.yaml  plots.csv
benchmarks/dropin_patch/: _kmeans.py  _kmeans_w_perf.py  install_patch.sh  readme.md
benchmarks/hepmass/: CPU+DPU.py  convert_to_pq.py  download_dataset.sh
benchmarks/heterogeneity/: convert_to_pq.py  download_dataset.sh
benchmarks/higgs/: .gitignore  2048_only.py  CPU+DPU.py  DPU_profiling.py  GPU.py  all_DPU.py  benchmarks.csv  download_dataset.sh  dvc.yaml  metrics.json  params.yaml  params_big.yaml  plots.csv  results.csv  sklearnx.py
benchmarks/higgs/data/: .gitignore  convert_to_pq.py
benchmarks/higgs_big/: benchmarks.csv  dvc.yaml  metrics.json  params.yaml  plots.csv  results.csv
benchmarks/precision/: CPU+DPU.py  benchmarks.csv  dvc.yaml  dvc.yaml.old  hostname.yaml  metrics.json  params.yaml  plots.csv  precision.yaml  precision_benchmarks.csv  precision_metrics.json  precision_plots.csv
benchmarks/scripts/: CPU.py  CPU_test_script.py  DPU.py  simple_run.py
benchmarks/scripts/dimension/: CPU.py  DPU.py
benchmarks/scripts/dropin_patch/: _kmeans.py  readme.md
benchmarks/scripts/expinst/: DPU.py
benchmarks/scripts/higgs/: CPU+DPU.py  convert_to_pq.py  download_dataset.sh
benchmarks/scripts/profile/: DPU.py
benchmarks/scripts/strong_scaling/: CPU+DPU.py
benchmarks/scripts/weak_scaling/: CPU+DPU.py
benchmarks/simple_benchmark/: .gitignore  CPU+DPU.py  benchmark.py  benchmarks.csv  dvc.yaml  machine.yaml  metrics.json  multiline.json  params.yaml  plots.csv  results.csv  simple.yaml  simple_benchmarks.csv  simple_metrics.json  simple_plots.csv
benchmarks/strong_scaling/: 2048_only.py  CPU+DPU.py  CPU_only.py  GPU.py  benchmarks.csv  dvc.yaml.old  machine.yaml  metrics.json  params.yaml  plots.csv
benchmarks/tasklets/: CPU+DPU.py  coalesce.py  run_bench.sh
benchmarks/weak_scaling/: .gitignore  CPU+DPU.py  GPU.py  benchmarks.csv  dvc.yaml  machine.yaml  metrics.json  only_CPU.py  params.yaml  plots.csv  results.csv
cmake/: CompilerWarnings.cmake
conda.recipe/: meta.yaml
docs/: conf.py  dpu_kmeans.rst  dpu_trees.rst  index.rst
src/: cluster.c  common.h  dpu.cmake  kmeans.c  kmeans.h  kmeans.hpp  kmeans_clustering.c  kmeans_dpu.c  main.cpp  rmse.c  trees.c  trees.h  trivial_checksum_example_host.c  trivial_checksum_example_host.h
src/dpu_kmeans/: __init__.py  _checksum.py  _core.pyi  _dimm.py  _kmeans.py  base_tree.py  perf.py
src/dpu_program/: .clang-tidy  CMakeLists.txt  dpu.cmake  kmeans_dpu_kernel.c  trivial_checksum_example.c
src/dpu_trees/: base_tree.py
src/host_program/: cluster.c  dimm_manager.c  dimm_manager.cpp  dimm_manager.hpp  kmeans.c  kmeans_clustering.c  kmeans_dpu.c  lloyd_iter.c  lloyd_iter.cpp  lloyd_iter.hpp  rmse.c  trivial_checksum_example_host.c
tests/: test_basic.py  test_functional.py  test_stubgen.py
