[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.7.1",
    # "scikit-build>=0.12",
    "pkgconfig",
    "setuptools_scm>=6.2",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["version"]
name = "dpu_kmeans"
description = "A package for the k-means algorithm on DPU."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
authors = [{ name = "Sylvan Brocard", email = "sbrocard@upmem.com" }]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scikit-learn",
    "importlib_resources; python_version<'3.9'",
    "xxhash",
]

[project.urls]
Repository = "https://github.com/upmem/dpu_kmeans"

[project.optional-dependencies]
test = ["pytest"]
benchmarks = ["pytest", "pandas", "pyarrow"]

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.define = { "NR_TASKLETS" = "16" }
