[build-system]
requires = ["pybind11", "scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["version"]
name = "dpu_kmeans"
description = "A package for the k-means algorithm on DPU."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
authors = [{ name = "Sylvan Brocard", email = "sbrocard@upmem.com" }]
requires-python = ">=3.7"
dependencies = [
    "numpy<2",
    "scikit-learn<1.1",
    "importlib_resources; python_version<'3.9'",
    "xxhash",
]

[project.urls]
Repository = "https://github.com/upmem/dpu_kmeans"
Documentation = "https://sdk.upmem.com/dpu_kmeans/"

[project.optional-dependencies]
test = ["pytest", "pybind11-stubgen"]
benchmarks = ["pytest", "pandas", "pyarrow", "hurry.filesize"]
doc = ["sphinx", "pydata-sphinx-theme", "myst-parser[linkify]"]

[tool.setuptools_scm]

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.exclude = ["benchmarks", ".dvc", ".dvcignore", ".github", ".devcontainer"]
sdist.include = ["src/dpu_kmeans/dpu_program", "src/dpu_kmeans/_core.*.so"]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.cmake.define]
NR_TASKLETS = "16"
UPMEM_HOME = { env = "UPMEM_HOME", default = "/usr" }

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ANN", "T201", "TRY003"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "INP001"]
