[metadata]
name = dpu_kmeans
description = A package for the k-means algorithm on DPU.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/upmem/dpu_kmeans
author = Sylvan Brocard
author_email = sylvan.brocard@gmail.com
